Correçao cloud-run.yaml

--- a/.github/workflows/cloud-run.yaml
+++ b/.github/workflows/cloud-run.yaml
@@ -30,8 +30,8 @@ jobs:
         service_id: ${{ secrets.RUN_PROJECT }}
 
     # Build and push image to Google Container Registry #
-    name: Build
-    run: |-
+    - name: Build
+      run: |-
       gcloud builds submit \
         --quiet \
         --config cloudbuild.yaml
