--- a/.github/workflows/cloud-run.yaml
+++ b/.github/workflows/cloud-run.yaml
@@ -27,7 +27,7 @@ jobs:
       with:
         version: '290.0.1'
         service_account_key: ${{ secrets.RUN_SA_KEY }}
-        service_id: ${{ secrets.RUN_PROJECT }}
+        project_id: ${{ secrets.RUN_PROJECT }}
 
     # Build and push image to Google Container Registry #
     - name: Build
